altes del web service

--- a/src/main/resources/templates/solicitudAsigEqui/crearSolicitudAsigEquipo.html
+++ b/src/main/resources/templates/solicitudAsigEqui/crearSolicitudAsigEquipo.html
@@ -124,7 +124,7 @@ and open the template in the editor.
             function sel(rut,id){
                 
                 $("#rut").val(rut);
-                $("#id").val(id);
+                $("#id").val(rut);
                 from();
             }
             function allUser(){
