--- a/src/main/resources/templates/devolucion/listar.html
+++ b/src/main/resources/templates/devolucion/listar.html
@@ -93,13 +93,13 @@ and open the template in the editor.
                                                         </span>
                                                     </td>
                                                     <td>
-                                                        <form th:action="${'/entrega/entregar/'+docRel.doc.id}"> 
+                                                        <form th:action="${'/devolucion/recepcion/'+docRel.doc.id}"> 
                                                             <button class="btn btn-primary" type="submit">Entregar</button>
                                                         </form>
                                                         
                                                     </td>
                                                     <td>
-                                                        <form th:action="${'/entrega/rechazar/'+docRel.doc.id}"> 
+                                                        <form th:action="${'/devolucion/recepcion/'+docRel.doc.id}"> 
                                                             <button class="btn btn-primary" type="submit">Rechazar</button>
                                                         </form>
                                                     </td>
