--- a/src/main/resources/templates/entrega/entrega.html
+++ b/src/main/resources/templates/entrega/entrega.html
@@ -84,7 +84,7 @@ and open the template in the editor.
                                             </div>
                                         </div>
                                         
-                                        <a th:href="${'/entrega/rechazar/'+docRel.doc.id}"> 
+                                        <a th:href="${'/entrega/rechazar/'+doc.doc.id}"> 
                                             <button class="btn btn-primary" type="button">Rechazar</button>
                                         </a>
                                         <input type="submit" class="btn btn-primary" value="enviar"/>
