--- a/src/main/resources/templates/solicitudAsigEqui/crearSolicitudAsigEquipo.html
+++ b/src/main/resources/templates/solicitudAsigEqui/crearSolicitudAsigEquipo.html
@@ -53,7 +53,7 @@ and open the template in the editor.
                                                 <input th:field="*{rutReceptor}" id="id" type="hidden" />
                                                 <input type="text" id="rut" disabled="false" /> 
                                                 <input class="btn btn-primary"  onclick="allUser();" type="button" data-toggle="modal" data-target=".bd-example-modal-lg" value="Buscar" />
-                                                <input class="btn btn-primary" type="button" value="crear receptor transitorio " />
+                                                <input class="btn btn-primary" onclick="crearUser();" type="button" value="crear receptor transitorio " />
                                             </div>
                                         </div>
                                         
@@ -72,6 +72,7 @@ and open the template in the editor.
                                     </form>
                                     </div>
                                     <div class="col-xl-12" id="listadoUser" style="display: none;" >
+                                        <input type="button" value="volver" onclick="from()" class="btn btn-primary"/>
                                         <table>
                                             <thead>
                                                 <tr>
@@ -101,8 +102,53 @@ and open the template in the editor.
                                             </tbody>
                                         </table>
                                     </div>
-                                    <div class="col-xl-12" id="listadoUser" >
+                                    <div class="col-xl-12" id="crearUser" style="display: none;"  >
+                                        <div class="form-group">
+                                            <label  for="testOrder" class="control-label">RUT </label>
+                                            <div>                                                
+                                                <input class="form-control"  type="text" id="newRut"  />                                                 
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label  for="testOrder" class="control-label">Nombre </label>
+                                            <div>                                                
+                                                <input class="form-control"  type="text" id="Nombre"  />                                                 
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label  for="testOrder" class="control-label">Apellidos </label>
+                                            <div>                                                
+                                                <input class="form-control"  type="text" id="lastName"  />                                                 
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label  for="testOrder" class="control-label">Email </label>
+                                            <div>                                                
+                                                <input class="form-control" type="text" id="Email"  />                                                 
+                                            </div>
+                                        </div>
                                         
+                                        <div class="form-group">
+                                            <label  for="testOrder" class="control-label">Departamento </label>
+                                            <div>                                                
+                                                <select id="depart" class="form-control">
+                                                    <option value="RH">
+                                                        recursos humanos
+                                                    </option>
+                                                    <option value="TI">
+                                                        informatica
+                                                    </option>
+                                                    <option value="FIN">
+                                                        Finanzas
+                                                    </option>
+                                                    <option value="etc">
+                                                        ECT
+                                                    </option>
+                                                </select>                                                 
+                                            </div>
+                                        </div>
+                                        <input type="button" value="Crear" onclick="enviarCrearUser();"  class="btn btn-primary"/>
+                                        <input type="button" value="volver" onclick="from()" class="btn btn-primary"/>
                                     </div>
                                 </div>
                                 <!--/.col-->
@@ -121,6 +167,37 @@ and open the template in the editor.
         </footer>
                       
         <script>
+            function enviarCrearUser(){
+               
+                 var usuarioExterno = {   "idUsuario":"",
+                                "email" : $("#Email").val(),
+                                "passwer":"",
+                                "lastName" :$("#lastName").val(),
+                                "name":$("#Nombre").val(),
+                                "birthdate":"",                    
+                                "idNacional":$("#newRut").val(),
+                                "estado":"",
+                                "departamento":$("#depart").val()
+                             };
+                             alert($("#newRut").val());
+                             alert(usuarioExterno.idNacional)
+                             alert(usuarioExterno);
+                             $.ajax({
+                                type: "POST",
+                                contentType : 'application/json; charset=utf-8',
+                                dataType : 'json',
+                                url: "/solicitudAsig/crearUser",
+                                data: JSON.stringify(usuarioExterno), // Note it is important
+                                success :function(result) {
+                                 alert(result.respuesta);
+                               }
+                            });
+            }            
+            function crearUser(){                
+                $("#principal").css("display","none");
+                $("#listadoUser").css("display","none");
+                $("#crearUser").css("display","block");                
+            }
             function sel(rut,id){
                 
                 $("#rut").val(rut);
@@ -129,10 +206,13 @@ and open the template in the editor.
             }
             function allUser(){
                 $("#principal").css("display","none");
+                $("#crearUser").css("display","none");
                 $("#listadoUser").css("display","block");
+                
             }
             function from(){
                 $("#listadoUser").css("display","none");
+                $("#crearUser").css("display","none");
                 $("#principal").css("display","block");
             }
             
